# cache-mod

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  REPS.md  clippy.toml  deny.toml  rustfmt.toml
.dev/: DIRECTIVES.md  PROMPT.md  ROADMAP.md
.dev/release/: v0.1.0.md  v0.4.0.md  v0.5.0.md
.github/workflows/: ci.yml
benches/: cache_ops.rs
docs/: API.md  README.md  STABILITY.md
docs/release/: v0.2.0.md  v0.3.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.9.0.md  v1.0.0.md
src/: cache.rs  error.rs  lfu.rs  lib.rs  lru.rs  sharding.rs  sized.rs  tinylfu.rs  ttl.rs  util.rs
tests/: properties.rs  smoke.rs
